Update style.production.css to fix spacing issues

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -421,7 +421,8 @@ nav{
 }
 
 .myflix-card h4,
-.chatapp-card h4 {
+.chatapp-card h4,
+.meet-application-card h4 {
     text-align: left;
     padding: 0;
     margin-top: 1em;
